dark mode: fixing switch color

--- a/app/assets/stylesheets/bootstrap_layout.sass
+++ b/app/assets/stylesheets/bootstrap_layout.sass
@@ -43,6 +43,8 @@ body.theme-dark
     stroke: white
   input.vs__search
     color: white
+  .form-check.form-switch input.form-check-input
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -3.5 8 7'%3e%3ccircle r='3'  fill='white'/%3e%3c/svg%3e")
 
 // Top bar
 // Make it a little transparent in order for the top-right ribbon to be shown
